MAR-76 As a user, I want to be able to jump to a category by clicking on a title or image on the Home page. (#3)
